--- a/concepts/product/test/case.mdx
+++ b/concepts/product/test/case.mdx
@@ -47,8 +47,8 @@ The Galtea SDK allows you to create, view, and manage test cases programmaticall
   Test case-specific context that provides context to the model. It can be the past conversation or any other relevant information. Do not mistake for the system prompt/few-shot examples; those should be defined in the product's [version](/concepts/product/version) unless they change on an interaction basis.
 </ResponseField>
 
-<ResponseField name="Tag" type="Text">
-  A label that helps categorize the test case. This helps in organizing and filtering test cases within your test suite (e.g., "specification", "factual_knowledge", "edge_case").
+<ResponseField name="Variant" type="Text">
+  A label that helps categorize the test case (e.g., "original", "paraphrased", "incorrect"). This corresponds to the `tag` column in an uploaded test CSV file and is used for organizing and filtering test cases.
 </ResponseField>
 
 <ResponseField name="Source" type="Text">
