--- a/sdk/api/evaluation-task/service.mdx
+++ b/sdk/api/evaluation-task/service.mdx
@@ -13,8 +13,8 @@ This Service is exposed by the `galtea.evaluation_tasks` object.
 </Info>
 
 ## SDK Methods
-- [Create Evaluation Task](/sdk/api/evaluation-task/create)
-- [Create Evaluation Task from Production](/sdk/api/evaluation-task/create-from-production)
+- [Create Single-Turn Evaluation Task](/sdk/api/evaluation-task/create-single-turn)
+- [Create Evaluation Tasks from Session](/sdk/api/evaluation-task/create-from-session)
 - [Listing Evaluation Tasks](/sdk/api/evaluation-task/list)
 - [Retrieving Evaluation Task](/sdk/api/evaluation-task/get)
 - [Deleting Evaluation Task](/sdk/api/evaluation-task/delete)
