--- a/sdk/api/evaluation/service.mdx
+++ b/sdk/api/evaluation/service.mdx
@@ -12,8 +12,11 @@ This Service is exposed by the `galtea.evaluations` object.
   Remember that we will be using the `galtea` object. More information [here](/sdk/api/galtea).
 </Info>
 
+<Note>
+  In Galtea SDK v2.0 and later, evaluations are created implicitly. You no longer need to call a `create` method. An evaluation is automatically generated when you create the first [evaluation task](/sdk/api/evaluation-task/service) for a specific product version and test combination.
+</Note>
+
 ## SDK Methods
-- [Create Evaluation](/sdk/api/evaluation/create)
 - [Listing Evaluations](/sdk/api/evaluation/list)
 - [Retrieving Evaluation](/sdk/api/evaluation/get)
 - [Deleting Evaluation](/sdk/api/evaluation/delete)
