--- a/concepts/product/evaluation.mdx
+++ b/concepts/product/evaluation.mdx
@@ -11,20 +11,21 @@ import SDKEvaluationServiceCard from '/snippets/cards/sdk-evaluation-service-car
 
 An evaluation in Galtea is a link between a specific [version](/concepts/product/version) and a [test](/concepts/product/test). It serves as the container for all the [evaluation tasks](/concepts/product/evaluation/task) that assess how well the product version performs against the test cases.
 
-The only way to **create** evaluations is programmatically by using the [Galtea SDK](/sdk/api/evaluation/service), but they can be viewed and managed on the [Galtea dashboard](https://platform.galtea.ai/).
+An evaluation is **created implicitly** the first time you run an [evaluation task](/concepts/product/evaluation/task) for a given combination of a product version and a test. Evaluations can be viewed and managed on the [Galtea dashboard](https://platform.galtea.ai/).
 
 ## Evaluation Workflow
 
 <Steps>
-  <Step title="Create an Evaluation">Link a specific [version](/concepts/product/version) with a [test](/concepts/product/test) to create an evaluation</Step>
-  <Step title="Execute Evaluation Tasks">
-    For each [Test Case](/concepts/product/test/case) in the test, [run](/sdk/examples/create-evaluation) one or more [evaluation tasks](/concepts/product/evaluation/task) to assess performance using different [metric types](/concepts/metric-type)
-  
+  <Step title="Run the First Evaluation Task">
+    An evaluation is created automatically when you [run the first evaluation task](/sdk/examples/create-evaluation) for a specific product version and test.
+  </Step>
+  <Step title="Execute Subsequent Tasks">
+    For each [Test Case](/concepts/product/test/case) in the test, [run](/sdk/examples/create-evaluation) one or more [evaluation tasks](/concepts/product/evaluation/task) to assess performance using different [metric types](/concepts/metric-type).
     <Info>
       For each [Test Case](/concepts/product/test/case), your [product](/concepts/product)'s model should be called with the [test case](/concepts/product/test/case)'s data, and its *output* should be provided to the [evaluation tasks](/concepts/product/evaluation/task).
     </Info>
   </Step>
-  <Step title="Review Results">Compare results across different versions of the same product using the [dashboard](https://platform.galtea.ai/)</Step>
+  <Step title="Review Results">Compare results across different versions of the same product using the [dashboard](https://platform.galtea.ai/).</Step>
 </Steps>
 
 ## Evaluation Tasks
