--- a/sdk/examples/monitor-production-responses-to-user-queries.mdx
+++ b/sdk/examples/monitor-production-responses-to-user-queries.mdx
@@ -1,62 +1,46 @@
 ---
-title: 'Monitor production responses'
-description: "Learn how to create evaluation tasks from user queries in production for deeper analysis"
+title: 'Monitor Production Responses'
+description: "Learn how to log and evaluate user queries from your production environment."
 icon: "users"
 ---
 
-[Evaluations](/concepts/product/evaluation) allow you to assess how well a specific [version](/concepts/product/version) of your [product](/concepts/product) performs against real user queries in production by running individual [evaluation tasks](/concepts/product/evaluation/task).
+You can use Galtea to log and evaluate real user interactions from your production environment. This helps you monitor your product's performance over time.
 
-## Instantiate the SDK
+## Logging and Evaluating a Production Interaction
 
-To use the Galtea SDK, you need to initialize it with your API key. This is typically done at the beginning of your script:
-
-  ```python
-  from galtea import Galtea
-
-  galtea = Galtea(api_key="YOUR_API_KEY")
-  ```
-
-## Capturing Production Data for Analysis
-
-You can create evaluation tasks directly from real user queries in your production environment.
-
-<Card title="SDK Documentation" icon="python" iconType="solid" href="/sdk/api/evaluation-task/create-from-production">
-  Learn more about creating evaluation tasks from production data.
-</Card>
-
-All the production data is stored for deeper analysis, allowing you to track performance over time:
+When your product handles a user query, you can send the interaction details to Galtea using `create_single_turn` with `is_production=True`.
 
 ```python
-from datetime import datetime
+from galtea import Galtea
 
-# When your product handles a real user query in production
-timeBeforeCall = datetime.now()
-response = your_product_function(user_query, context, retrieval_context)
-timeAfterCall = datetime.now()
+galtea = Galtea(api_key="YOUR_API_KEY")
+VERSION_ID = "YOUR_ACTIVE_VERSION_ID"
 
-# Create an evaluation task from this production interaction
-evaluation_tasks = galtea.evaluation_tasks.create_from_production(
-  version_id=VERSION_ID,
-  metrics=["coherence", metric.name, "answer relevancy"],
-  input=user_query,
-  actual_output=response,
-  retrieval_context=retrieval_context,
-  context=context,
-  conversation_turns=extract_conversation_turns(conversation_history),
-  usage_info={
-    "input_tokens": response.input_tokens,
-    "output_tokens": response.output_tokens,
-    "cache_read_input_tokens": response.cache_read_input_tokens,
-  },
-  latency=(timeAfterCall - timeBeforeCall).total_seconds() * 1000
-)
+# In your application's request handler...
+def handle_user_query(user_query):
+    # ... your logic to get a response from your model ...
+    # model_response = your_product_function(user_query)
+    model_response = "This is the model's live response."
+    
+    # Log and evaluate the interaction in Galtea
+    galtea.evaluation_tasks.create_single_turn(
+      version_id=VERSION_ID,
+      is_production=True,
+      metrics=["coherence", "answer-relevancy"],
+      input=user_query,
+      actual_output=model_response
+    )
+    
+    return model_response
+
+# Example call
+handle_user_query("What are your shipping options?")
 ```
 
 <Info>
-  By capturing evaluation data from production, you build a valuable repository of real-world performance metrics that can be analyzed later to identify trends, issues, and opportunities for improvement.
+  By capturing evaluation data from production, you build a valuable repository of real-world performance metrics that can be analyzed on the Galtea dashboard to identify trends, issues, and opportunities for improvement.
 </Info>
+
 <Note>
-  The `metrics` parameter specifies which [metric types](/concepts/metric-type) to use for evaluating the task. You can use multiple metrics simultaneously to get different perspectives on performance.
-  
-  The `latency` and `usage_info` parameters are optional but highly recommended to keep track of the the real performance data of you product. 
+  This example focuses on single-turn production monitoring. For evaluating multi-turn conversations, please see our guide on [Evaluating Conversations](/sdk/examples/evaluating-conversations).
 </Note>
