--- a/sdk/api/session/create.mdx
+++ b/sdk/api/session/create.mdx
@@ -4,7 +4,7 @@ description: "Create a new session to group inference results."
 ---
 
 ## Returns
-Returns a [Session](/concepts/session) object.
+Returns a [Session](/concepts/product/session) object.
 
 ## Example
 ```python
