--- a/sdk/api/session/list.mdx
+++ b/sdk/api/session/list.mdx
@@ -4,7 +4,7 @@ description: "List sessions with optional filtering."
 ---
 
 ## Returns
-Returns a list of [Session](/concepts/session) objects.
+Returns a list of [Session](/concepts/product/session) objects.
 
 ## Example
 ```python
