--- a/sdk/api/session/service.mdx
+++ b/sdk/api/session/service.mdx
@@ -5,7 +5,7 @@ description: "Session Service API methods in the Galtea SDK"
 
 import SessionCard from '/snippets/cards/session-card.mdx';
 
-The Session Service in the Galtea SDK allows you to manage [sessions](/concepts/session) for evaluating your products.
+The Session Service in the Galtea SDK allows you to manage [sessions](/concepts/product/session) for evaluating your products.
 This Service is exposed by the `galtea.sessions` object.
 
 <Info>
