--- a/sdk/api/session/get.mdx
+++ b/sdk/api/session/get.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific session by its ID."
 ---
 
 ## Returns
-Returns a [Session](/concepts/session) object.
+Returns a [Session](/concepts/product/session) object.
 
 ## Example
 ```python
